--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.12.16",
     "next": "13.4.4",
+    "openai": "^3.3.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.32.1",
+    "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
